add average rain survey and fix survey api
